production/ingress-project.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
spec:
  rules:
  - host: pesbuk.fiardika.xyz
    http:
      paths:
        - backend:
            serviceName: pesbuk-service
            servicePort: 80
  - host: fiardika.fiardika.xyz
    http:
      paths:
        - backend:
            serviceName: landing-page-service
            servicePort: 80
  - host: blog.fiardika.xyz
    http:
      paths:
        - backend:
            serviceName: wordpress-service
            servicePort: 80
